# practice

./: README.md
books/elements-of-programming-interviews/: ch 04 - Primitive Types.ipynb  ch 18 - Graphs.ipynb
books/learn-python-the-hard-way/: ex10.py  ex11.py  ex12.py  ex16.py  ex17.py  ex22.py  ex25.py  ex3.2.py  ex30.py  ex33.py  ex35.py  ex4.py  ex42.py  ex43.py  ex43_game.py  ex6.py  ex7.py  ex8.py  factorial.py  tosin.txt  tosin1.py  tosin11_tower.py  tosin11_tower_rec.py  tosin3_prime_recursion.py  tosin4_perfect_square_decimal_new.py  tosin5_leap_year.py  tosin6_loop_prime.py  tosin7_fibbanacci.py  tosin8_multi.py
companies/bloom/: readme.md  solution.py  test_solution.py
companies/britecore/: BriteCore quiz.py.ipynb  BriteCore.py
companies/grit.systems/: GRIT1_fizzbuzz.js  GRIT2_equilibrium_index.py
companies/hiringsolved/: challenge.hiringsolved.com.ipynb  challenge.hiringsolved.com_breadcrumbs.py
companies/spotify/: cats.py  spotify_cats_nd_dogs.py
judged/: readme.md
judged/algoexpert/: airport_connections.py  apartment_hunting.py  calendar_matching.py  interweaving_strings.py  longest_substring_without_duplicatio.py
judged/codewars/: bouncing_balls.rs  disemvowel_trolls.rs  keep_hydrated.rs  pairwise.py  (+5 more)
learned/: readme.md
learned/novig-cs212/pig/: pyproject.toml  readme.md
learned/novig-cs212/pig/src/: readme.md
learned/novig-cs212/pig/src/pig/: entrypoint.py  usecase.py
learned/novig-cs212/pig/src/pig/domain/: game.py  strategies.py
learned/novig-cs212/pig/tests/: test_usecase.py
made/: readme.md
projects/: README.md
(+198 files in other folders)
