[tool.poetry]
name = "pig"
version = "0.1.0"
description = ""
authors = ["Daniel Okey-Okoro <danielokeyokoro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
